[metadata]
name = clappy
version = attr: __version__
author = Toshiyuki Yokoyama
author_email = yokoyamacode@gmail.com
description = Command line argument parser for pythonic code
keywords = command line, argument, option, parser
url = https://github.com/yoko72/clappy
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Topic :: Software Development :: Libraries :: Python Modules
license_files = LICENSE

[options]
packages = clappy
setup_requires = wheel
python_requires = >=3.6
